RAIN-6830 : BND Confirmation Dialog alignment issue fix

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-atoms-local/AutoSuggest/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-atoms-local/AutoSuggest/index.scss
@@ -3,18 +3,19 @@
   max-height: "200px";
   overflow-y: "scroll"; }
 
-  .autocomplete-dropdown {
-    min-width: 100%;
-    position: absolute;
-    z-index: 1900;
-    max-height: 150px;
-    overflow: auto; }
-  
-  .autocomplete-dropdown div {
-    min-width: 100%;
-    height: auto;
-    overflow: auto;
-    white-space: pre-line; }
+.autocomplete-dropdown {
+  min-width: 80%;
+  position: absolute;
+  z-index: 2000;
+  max-height: 150px;
+  overflow: hidden; }
+
+.autocomplete-dropdown div {
+  min-width: 80%;
+  z-index: 2000;
+  max-height: 150px;
+  overflow: auto; }
+
   
   
       p[class^="MuiFormHelperText-root"] {
